<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:background="@drawable/frame_172"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/create_new_account"
            android:text="@string/create_account"
            android:layout_width="328dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold|normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.008"
            android:layout_marginTop="172dp"
            app:layout_constraintHorizontal_bias="0.498"/>

    <EditText
            android:id="@+id/editTextTextEmailAddress_createAc"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            android:hint="@string/email_address_create_activity"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/background_login_bottom"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="246dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.011"/>
    <EditText
            android:id="@+id/editTextNumberPassword"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:textSize="12sp"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/background_login_bottom"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="319dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.021"/>
    <EditText
            android:id="@+id/editTextNumberPassword_createAc"
            android:inputType="numberPassword"
            android:hint="@string/password_create_activity"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="12sp"
            android:background="@drawable/background_login_bottom"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="392dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.021"/>

    <EditText
            android:id="@+id/editTextNumberPassword_createAc_repeat"
            android:inputType="numberPassword"
            android:hint="@string/confirm_password"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="12sp"
            android:background="@drawable/background_login_bottom"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="465dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.021"/>
    <Button
            android:id="@+id/signUp"
            android:text="@string/sign_up_create_activity"
            android:textSize="16sp"
            android:textColor="@color/background_tint_text_color"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:background="@drawable/background_login_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintHorizontal_bias="0.549"
            android:layout_marginTop="514dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.153"/>
    <TextView
            android:id="@+id/HaveAccount"
            android:layout_width="180dp"
            android:layout_height="22sp"
            android:text="@string/already_have_an_account"
            android:textStyle="normal"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintVertical_bias="0.952"/>
    <TextView
            android:id="@+id/loginCreate_ac"
            android:layout_width="100dp"
            android:layout_height="22dp"
            android:text="@string/log_in_create"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/blue"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintVertical_bias="0.952"/>


</androidx.constraintlayout.widget.ConstraintLayout>
