<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".HomeLibrary">

    <TextView
            android:id="@+id/homeText"
            android:text="@string/home"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.029"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp"/>

    <Button
            android:id="@+id/LibraryHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/library"
            app:layout_constraintEnd_toStartOf="@+id/NoteStorageHome" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeText" android:layout_marginTop="4dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" app:layout_constraintVertical_bias="0.015"/>
    <Button
            android:id="@+id/NoteStorageHome"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/notes_storage1"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintTop_toBottomOf="@+id/homeText" app:layout_constraintVertical_bias="0.023"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>


    <fragment
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="418dp"
            app:layout_constraintTop_toBottomOf="@+id/NoteStorageHome"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
    <Button
            app:layout_constraintVertical_bias="0.58"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment"
            android:id="@+id/buttonSound"
            android:layout_width="53dp"
            android:drawableStart="@drawable/baseline_volume_up_24"
            android:text="@string/sound"
            android:layout_height="53dp"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:id="@+id/bottomNavigationView"
            app:menu="@menu/bottom_navmenu"
            android:background="@color/white" app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>