<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPassword">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:background="@drawable/frame_172"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/ForgotPasswordPage"
            android:text="@string/forgot_password"
            android:layout_width="328dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold|normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.008"
            android:layout_marginTop="172dp"
            app:layout_constraintHorizontal_bias="0.498"/>

    <EditText
            android:id="@+id/editTextTextEmailAddress_forgotPage"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            android:hint="@string/email_address_forgot_page"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/background_login_bottom"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="246dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.011"/>

    <Button
            android:id="@+id/ResetPasswordButton"
            android:text="@string/reset_my_password"
            android:textSize="16sp"
            android:textColor="@color/background_tint_text_color"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:background="@drawable/background_login_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintHorizontal_bias="0.494"
            android:layout_marginTop="514dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.041"/>

</androidx.constraintlayout.widget.ConstraintLayout>